[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/gun.png" type="Texture" id=1]
[ext_resource path="res://Guns/Gun.gd" type="Script" id=2]
[ext_resource path="res://Guns/Bullets/EnemyBullet.tscn" type="PackedScene" id=3]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Gun" type="Node2D"]
position = Vector2( 40, 48 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )

[node name="GunSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 1 )

[node name="Reload" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimeBetweenShoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="timeout" from="TimeBetweenShoot" to="." method="_on_TimeBetweenShoot_timeout"]
